--- a/01-backend/package.json
+++ b/01-backend/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "dev": "nodemon ./bin/www"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -16,5 +17,9 @@
     "mongoose": "^6.8.3",
     "mongoose-lean-virtuals": "^0.9.1",
     "morgan": "~1.9.1"
+  },
+  "devDependencies": {
+    "@types/node": "^18.11.17",
+    "nodemon": "^2.0.20"
   }
 }
