--- a/05-frontend-end-user/moon/package.json
+++ b/05-frontend-end-user/moon/package.json
@@ -20,6 +20,7 @@
     "next": "13.1.6",
     "numeral": "^2.0.6",
     "react": "^18.2.0",
+    "react-autocomplete": "^1.8.1",
     "react-dom": "^18.2.0"
   }
 }
